Sun Jun  1 2003  Vitezslav Samel <samel@mail.cz>
	* cmd.c, tab.c, uisrch.c:
	don't beep when not asked
	(suggestion by Marc Joosen <marcj@historia.et.tudelft.nl>)

Sun Jun  1 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac, ublock.c:
	NEW FEATURE: when filtering block put JOE_FILENAME= with the right
	filename into the environment (only when putenv() is available);
	patch by Marc Joosen <marcj@historia.et.tudelft.nl>

Sat May 31 2003  Vitezslav Samel <samel@mail.cz>
	* uedit.c:
	make u_goto_prev()/u_goto_next() act like ubackw()/u_word_delete()
	when moving cursor, i.e. operate on the same class of characters

Sat May 31 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	change version number to include _CVS suffix

Mon May  5 2003  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.8 ***

	* NEWS, configure.ac, main.c:
	update NEWS; bump up version; update copyright year
	
Sat May  3 2003  Vitezslav Samel <samel@mail.cz>
	* README:
	delete untrue statements and mention the new build system;
	this file needs some more work

Sat Mar 22 2003  Vitezslav Samel <samel@mail.cz>
	* jstarrc.in, rc.c:
	fix typos (patch by Jesse McGrew)

Sat Mar 22 2003  Vitezslav Samel <samel@mail.cz>
	* cmd.c:
	fix memleak in docmd() (patch by Jesse McGrew)

Sat Mar 22 2003  Vitezslav Samel <samel@mail.cz>
	* path.c:
	use O_EXCL when creating temporary file

Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
	* bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, menu.c, path.c,
	poshist.c, pw.c, qw.c, rc.c, regex.c, scrn.c, tab.c, termcap.c, tty.c,
	tw.c, ublock.c, uedit.c, uerror.c, ufile.c, uisrch.c, umath.c, undo.c,
	usearch.c, ushell.c, utag.c, vfile.c, vs.c, w.c:
	change 0 to NULL where we're talking about pointers

Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
	* vs.c, vs.h:
	make vsrm() and slen() of type sELEMENT *

Sat Feb 22 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	remove AC_FUNC_MALLOC check; this fixes problem with compilation